tests/parsing/cmc/errors/139.expected
File "tests/parsing/cmc/errors/139.cmc", line 1, character 36-42:
1 | (define-system system :init (= 1 1) :query)
                                        ^^^^^^
Error while parsing a system definition, read the reserved word ':query',
      but expected a keyword (:subsys, :init, :trans, :inv).
